# Python-ImageGenerator

./: .gitignore  README.md  TODO.md  conda-environment.yaml  conda-environment.yml  conda_environment.yml  pyproject.toml  setup.py
latexlattices/lattices/oned_sticks/: lattice.py  parameters.yaml
src/imagegenerator/: __main__.py
src/imagegenerator/configs/: manager.py
src/imagegenerator/lattices/oned_sticks/: lattice.py  parameters.py
src/imagegenerator/utilities/: shapes.py
src/imagegenerator/validate/: general.py  parameters_general.py  properties.py  shapes.py  validate_general_1d.py  validate_properties.py
src/latex_shapes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/latexlattices/: __main__.py
src/latexlattices/lattices/oned_sticks/: parameters.py
src/latexlattices/validate/: validate_general_1d.py
src/lattices/oned_sticks/: lattice.py  parameters.py  parameters.yaml
src/validate/: validate_general.py  validate_general_1d.py  validate_general_2d.py  validate_properties.py
temp/: test.tex
test_unit/lattices/oned_sticks/: test_parameters.py  test_parameters.yaml
test_unit/validate/: test_validate_general.py  test_validate_general_1d.py  test_validate_general_2d.py
tests/lattices/oned_sticks/: test_parameters.py
tests/validate/: test_validate_general_1d.py  test_validate_general_2d.py
