# This is the installation script for the package cchecker. For more information on how more
# parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ----------------------------------------- Build System ----------------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ---------------------------------------- Project Details --------------------------------------- #


[project]
name = "latexlattices"
authors = [
    {name = "Andres Garcia Escovar", email = "andrumen1@yahoo.com"},
]
description = "Procedurally creates Tikz images for the different Stochastic Models"
readme = "README.md"
requires-python = ">=3.11.6"
keywords = ["Stochastic", "RSA 1D", "RSA 2D", "SFD", "Images"]
license = {text = "MIT"}
dependencies = [
    "numpy==2.4.2",
]
version = "0.0.1"


# ---------------------------------------- Optional Fields --------------------------------------- #


[project.optional-dependencies]
debugging = ["icecream==2.1.3"]


# --------------------------------------- Package Commands --------------------------------------- #


[project.scripts]
latexlattice = "latexlattices.__main__:main"


# -------------------------------------- Packages to Include ------------------------------------- #


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
