# This is the installation script for the package imagegenerator. For more
# information on how more parameters can be added, see:
# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html


# ------------------------------- Build System ------------------------------- #


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


# ------------------------------ Project Details ----------------------------- #


[project]
name = "imagegenerator"
authors = [
    {name = "Andres Garcia Escovar", email = "andrumen1@yahoo.com"},
]
description = "Procedurally creates Tikz images for the different Stochastic Models"
readme = "README.md"
requires-python = ">=3.11.6"
keywords = ["Images", "RSA 1D", "RSA 2D", "SFD", "Stochastic"]
license = {text = "MIT"}
dependencies = [
    "numpy==2.4.2",
    "pyyaml==6.0.1"
]
version = "0.0.1"


# ----------------------------- Package Commands ----------------------------- #


[project.scripts]
latexlattice = "latexlattices.__main__:main"


# ---------------------------- Packages to Include --------------------------- #


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false


# -------------------------- Pylint Flags to Include ------------------------- #


[tool.pylint]
disable = []
